test/types/sync/vass/ref-sync-4.good
ref-sync-4.chpl:5: error: unresolved call 'MYPROC(_syncvar(int(64)))'
ref-sync-4.chpl:7: note: this candidate did not match: MYPROC(ref FORMAL: syncreal)
ref-sync-4.chpl:5: note: because call actual argument #1 with type _syncvar(int(64))
ref-sync-4.chpl:7: note: is passed to formal 'ref FORMAL: _syncvar(real(64))'
